# OmniShell

./: Cargo.toml  README.md
.github/workflows/: ci.yml
config/: orchestrator-dev.toml  orchestrator-minimal.yaml  orchestrator.toml
docs/: ARCHITECTURE.md
src/: lib.rs  main.rs  runner.rs
src/application/: aggregator.rs  circuit_breaker.rs  context_service.rs  mod.rs  orchestrator_service.rs  planner.rs  router.rs
src/application/aggregator/: mod.rs  tests.rs
src/application/circuit_breaker/: breaker.rs  mod.rs
src/application/context_service/: manager.rs  mod.rs  tests.rs
src/application/orchestrator_service/: builder.rs  mod.rs  process.rs  test_fakes.rs  tests.rs  worker.rs
src/application/planner/: mod.rs  tests.rs
src/application/router/: mod.rs  tests.rs
src/domain/: agent.rs  cache.rs  context.rs  error.rs  mod.rs  orchestrator.rs  policy.rs  secrets.rs  task.rs  token.rs  tool.rs
src/domain/agent/: mod.rs  port.rs  types.rs
src/domain/cache/: mod.rs  port.rs  types.rs
src/domain/context/: config.rs  ledger.rs  message.rs  mod.rs  ports.rs
src/domain/error/: mod.rs  severity.rs
src/domain/orchestrator/: mod.rs  ports.rs  types.rs
src/domain/policy/: mod.rs  port.rs  types.rs
src/domain/task/: config.rs  mod.rs  types.rs
src/domain/token/: budget.rs  counter.rs  mod.rs
src/infrastructure/: cli_adapter.rs  config.rs  lru_cache.rs  memory_store.rs  mod.rs  policy_guard.rs  secrets.rs  task_queue.rs  tool_executor.rs
src/interface/: cli.rs  mod.rs  quickstart.rs
tests/: integration_test.rs  test_helpers.rs
(+26 files in other folders)
