[package]
name = "omnishell-orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["OmniShell Contributors"]
description = "Production-grade multi-agent AI orchestrator in Rust"
license = "MIT"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Hashing (for cache keys)
sha2 = "0.10"
hex = "0.4"

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"

# Async trait
async-trait = "0.1"

# Regex (policy guard)
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
